--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,10 @@ repos:
     rev: 3.5.3
     hooks:
       - id: commitizen
+      - id: commitizen-branch
+        stages: [push]
+# -   repo: https://github.com/astral-sh/ruff-pre-commit
+#     # Ruff version.
+#     rev: v0.0.280
+#     hooks:
+#       - id: ruff
