--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,8 +14,8 @@ repos:
       - id: commitizen
       - id: commitizen-branch
         stages: [push]
-# -   repo: https://github.com/astral-sh/ruff-pre-commit
-#     # Ruff version.
-#     rev: v0.0.280
-#     hooks:
-#       - id: ruff
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.0.282
+    hooks:
+      - id: ruff
