fix: address errors flagged by ruff with version 0.1.9
Signed-off-by: Filippo Carra <2720589+karrukola@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@
         "TD",
         "FIX001",
         "FIX002",
+        "PYI024", # false positives in lib/deejayit.py
     ]
     select = ["ALL"]
     # Same as Black.
