--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,7 @@
 [tool.ruff]
+target-version = "py38"
+
+[tool.ruff.lint]
 ignore = [
     "D203",
     "D213",
@@ -14,17 +17,6 @@ ignore = [
     "ISC001",
 ]
 select = ["ALL"]
-# Same as Black.
-line-length = 88
-
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-
-target-version = "py38"
-
-[tool.ruff.mccabe]
-# Unlike Flake8, default to a complexity level of 10.
-max-complexity = 10
 
 [tool.ruff.format]
 docstring-code-format = true
