--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,13 @@ convention = "pep257"
 [tool.ruff.format]
 docstring-code-format = true
 
+[tool.ruff.per-file-ignores]
+"tests/*" = [
+    "ANN201", # it is always None for tests
+    "D100",   # each test is documented
+    "INP001", # is it not how pytest works?
+    "S101",   # pytest works this way
+]
 
 [tool.coverage]
 
